zellij-server/src/panes/tiled_panes/unit/snapshots/zellij_server__panes__tiled_panes__stacked_panes__stacked_panes_tests__combine_vertically_aligned_panes_to_stack_when_lower_pane_is_stacked_and_flexible_pane_is_mid_stack.snap
---
source: zellij-server/src/panes/tiled_panes/./unit/stacked_panes_tests.rs
assertion_line: 136
expression: "format!(\"{:#?}\", pane_geoms_after)"
---
[
    PaneGeom {
        x: 0,
        y: 0,
        rows: Dimension {
            constraint: Percent(
                33.3,
            ),
            inner: 33,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: None,
        is_pinned: false,
        logical_position: Some(
            1,
        ),
    },
    PaneGeom {
        x: 0,
        y: 33,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            0,
        ),
        is_pinned: false,
        logical_position: Some(
            2,
        ),
    },
    PaneGeom {
        x: 0,
        y: 34,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            0,
        ),
        is_pinned: false,
        logical_position: Some(
            3,
        ),
    },
    PaneGeom {
        x: 0,
        y: 35,
        rows: Dimension {
            constraint: Percent(
                66.6,
            ),
            inner: 64,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            0,
        ),
        is_pinned: false,
        logical_position: Some(
            4,
        ),
    },
    PaneGeom {
        x: 0,
        y: 99,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            0,
        ),
        is_pinned: false,
        logical_position: Some(
            5,
        ),
    },
]
